# EProgramable_FIUNER

./: .gitignore  LICENSE  README.md
documentación/: Electronica Programable.Doxyfile  compilación.md  depuración.md  hardware.md  instalación.md  proyecto_nuevo.md  repositorio.md  repositorio2.md
firmware/: EProgramable_C6.code-workspace
firmware/drivers/: CMakeLists.txt
firmware/drivers/devices/inc/: buzzer.h  buzzer_melodies.h  fonts.h  hc_sr04.h  hx711.h  icons.h  ili9341.h  l293.h  lcditse0803.h  led.h  mpu6050.h  neopixel_stripe.h  servo_sg90.h  switch.h  ws2812b.h
firmware/drivers/devices/src/: buzzer.c  esp_edu_pic.c  fonts.c  hc_sr04.c  hx711.c  icons.c  ili9341.c  l293.c  lcditse0803.c  led.c  mpu6050.c  neopixel_stripe.c  servo_sg90.c  switch.c  ws2812b.c
firmware/drivers/microcontroller/inc/: analog_io_mcu.h  ble_hid_mcu.h  ble_mcu.h  delay_mcu.h  gpio_fast_out_mcu.h  gpio_mcu.h  i2c_mcu.h  pwm_mcu.h  rtc_mcu.h  spi_mcu.h  timer_mcu.h  uart_mcu.h
firmware/drivers/microcontroller/src/: analog_io_mcu.c  ble_hid_mcu.c  ble_mcu.c  delay_mcu.c  gpio_fast_out_mcu.c  gpio_mcu.c  i2c_mcu.c  pwm_mcu.c  rtc_mcu.c  spi_mcu.c  timer_mcu.c  uart_mcu.c
firmware/middelware/: CMakeLists.txt
firmware/middelware/signal_processing/inc/: fft.h  iir_filter.h
firmware/middelware/signal_processing/src/: fft.c  iir_filter.c
firmware/projects/0_blinking/: CMakeLists.txt  README.md  sdkconfig.old
firmware/projects/0_blinking/main/: 0_blinking.c  CMakeLists.txt
firmware/projects/1_blinking_switch/: CMakeLists.txt  README.md
firmware/projects/1_blinking_switch/main/: 1_blinking_switch.c  CMakeLists.txt
firmware/projects/2_blinking_tasks/: CMakeLists.txt  README.md  sdkconfig.old
firmware/projects/2_blinking_tasks/main/: 2_blinking_tasks.c  CMakeLists.txt
firmware/projects/3_blinking_timer/: CMakeLists.txt  README.md  sdkconfig
firmware/projects/3_blinking_timer/main/: 3_blinking_timer.c  CMakeLists.txt
firmware/projects/guia1_ej4/main/: guia1_ej4.c
firmware/projects/guia2_ej1/: CMakeLists.txt  Doxyfile
firmware/projects/guia2_ej1/documentacion/doxygen/html/: bootloader_2config_2sdkconfig_8h_source.html  config_2sdkconfig_8h_source.html  dir_0f6df6049ca47070d50dd6667434b1b1.html  dir_16280b94ec18e6f0e1f1d824982fb61b.html  dir_16cd375328abb2f371198fccef29fd98.html  dir_2d8cd51e8485dc4719e06ff2a2be0684.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_4fef79e7177ba769987a8da36c892c5f.js  dir_517b432c5cc8121204403a5913445cf4.html  dir_517b432c5cc8121204403a5913445cf4.js  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68c3b7fd5cb1c5bf98d2ffc7764fec3f.html  dir_8165d963cd765c284d618d89479b5e59.html  dir_8165d963cd765c284d618d89479b5e59.js  dir_95184fd9bed3ca1f63a503303d942f41.html  dir_95184fd9bed3ca1f63a503303d942f41.js  dir_a475dc0e3e2becd67b49ff98224b81b7.html  dir_c6ef69ba2a0993bf73d8aa3d755b7427.html  dir_c8e4a6cd3babdd6fce1630fe3d091130.html  dir_cd8a82c70073d51225b783e30ef2842c.html  dir_d1d9b2ce7966d1316b45ff85a86ef455.html  dir_eed08600d5be68c0e052465144c43a72.html  dir_eed08600d5be68c0e052465144c43a72.js  doxygen_crawl.html  files.html  files_dup.js  index.html  index.js  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html  ssl__debug__helpers__generated_8c.html
firmware/projects/guia2_ej1/documentacion/doxygen/latex/: bootloader_2config_2sdkconfig_8h_source.tex  config_2sdkconfig_8h_source.tex  files.tex  index.tex  refman.tex  ssl__debug__helpers__generated_8c.tex
firmware/projects/guia2_ej1/main/: CMakeLists.txt  guia2_ej1.c
firmware/projects/guia2_ej2/: Doxyfile  doxygen_log.txt
firmware/projects/guia2_ej2/Documentacion/: ALL0042.rar
firmware/projects/guia2_ej2/Documentacion/doxygen/html/: _c_make_files_23_830_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_830_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _c_make_files_23_830_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _r_e_a_d_m_e_8md.html  bootloader_2_c_make_files_23_830_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  bootloader_2_c_make_files_23_830_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  bootloader_2_c_make_files_23_830_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  bootloader_2config_2sdkconfig_8h.html  bootloader_2config_2sdkconfig_8h.js  bootloader_2config_2sdkconfig_8h_source.html  bootloader_2project__elf__src__esp32c6_8c.html  config_2sdkconfig_8h.html  config_2sdkconfig_8h_source.html  dir_0f6df6049ca47070d50dd6667434b1b1.html  dir_0f6df6049ca47070d50dd6667434b1b1.js  dir_16280b94ec18e6f0e1f1d824982fb61b.html  dir_16cd375328abb2f371198fccef29fd98.html  dir_16cd375328abb2f371198fccef29fd98.js  dir_2d8cd51e8485dc4719e06ff2a2be0684.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_4fef79e7177ba769987a8da36c892c5f.js  dir_517b432c5cc8121204403a5913445cf4.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_5c982d53a68cdbcd421152b4020263a9.js  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68c3b7fd5cb1c5bf98d2ffc7764fec3f.html  dir_68c3b7fd5cb1c5bf98d2ffc7764fec3f.js  dir_8165d963cd765c284d618d89479b5e59.html  dir_95184fd9bed3ca1f63a503303d942f41.html  dir_a475dc0e3e2becd67b49ff98224b81b7.html  dir_c6ef69ba2a0993bf73d8aa3d755b7427.html  dir_c6ef69ba2a0993bf73d8aa3d755b7427.js  dir_c8e4a6cd3babdd6fce1630fe3d091130.html  dir_cd8a82c70073d51225b783e30ef2842c.html  dir_cd8a82c70073d51225b783e30ef2842c.js  dir_d1d9b2ce7966d1316b45ff85a86ef455.html  dir_eed08600d5be68c0e052465144c43a72.html  dir_eed08600d5be68c0e052465144c43a72.js  doxygen_crawl.html  error_8c.html  (+42 more)
firmware/projects/guia2_ej2/main/: CMakeLists.txt  guia2_ej2.c
firmware/projects/guia2_ej3/: CMakeLists.txt  Doxyfile  README.md  doxygen_log.txt  sdkconfig
firmware/projects/guia2_ej3/main/: CMakeLists.txt  guia2_ej3.c
firmware/projects/guia2_ej4/: Doxyfile  doxygen_log.txt
firmware/projects/guia2_ej4/main/: CMakeLists.txt  guia2_ej4.c
firmware/projects/x_template/: README.md
firmware/projects/x_template/main/: CMakeLists.txt  x_template.c
(+284 files in other folders)
