idf_build_get_property(target IDF_TARGET)

# Always compiled source files
set(srcs
    "signal_processing/src/iir_filter.c"
    "signal_processing/src/fft.c"

# ESP-DSP
    "signal_processing/esp-dsp/modules/common/misc/dsps_pwroftwo.cpp"
    "signal_processing/esp-dsp/modules/common/misc/aes3_tie_log.c"
    "signal_processing/esp-dsp/modules/dotprod/float/dsps_dotprod_f32_ae32.S"
    "signal_processing/esp-dsp/modules/dotprod/float/dsps_dotprod_f32_m_ae32.S"
    "signal_processing/esp-dsp/modules/dotprod/float/dsps_dotprode_f32_ae32.S"
    "signal_processing/esp-dsp/modules/dotprod/float/dsps_dotprode_f32_m_ae32.S"
    "signal_processing/esp-dsp/modules/dotprod/float/dsps_dotprod_f32_ansi.c"
    "signal_processing/esp-dsp/modules/dotprod/float/dsps_dotprode_f32_ansi.c"
    "signal_processing/esp-dsp/modules/dotprod/float/dsps_dotprod_f32_aes3.S"

    "signal_processing/esp-dsp/modules/dotprod/fixed/dsps_dotprod_s16_ae32.S"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dsps_dotprod_s16_m_ae32.S"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dsps_dotprod_s16_ansi.c"

    "signal_processing/esp-dsp/modules/dotprod/float/dspi_dotprod_f32_ansi.c"
    "signal_processing/esp-dsp/modules/dotprod/float/dspi_dotprod_off_f32_ansi.c"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_s16_ansi.c"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_u16_ansi.c"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_s8_ansi.c"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_u8_ansi.c"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_s16_ansi.c"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_u16_ansi.c"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_s8_ansi.c"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_u8_ansi.c"

    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_s16_aes3.S"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_u16_aes3.S"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_s16_aes3.S"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_u16_aes3.S"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_s8_aes3.S"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_u8_aes3.S"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_u8_aes3.S"
    "signal_processing/esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_s8_aes3.S"

    "signal_processing/esp-dsp/modules/matrix/mul/float/dspm_mult_3x3x1_f32_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/mul/float/dspm_mult_3x3x3_f32_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/mul/float/dspm_mult_4x4x1_f32_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/mul/float/dspm_mult_4x4x4_f32_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/mul/float/dspm_mult_f32_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/mul/float/dspm_mult_f32_aes3.S"
    "signal_processing/esp-dsp/modules/matrix/mul/float/dspm_mult_f32_ansi.c"
    "signal_processing/esp-dsp/modules/matrix/mul/float/dspm_mult_ex_f32_ansi.c"
    "signal_processing/esp-dsp/modules/matrix/mul/float/dspm_mult_ex_f32_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/mul/float/dspm_mult_ex_f32_aes3.S"
    "signal_processing/esp-dsp/modules/matrix/mul/fixed/dspm_mult_s16_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/mul/fixed/dspm_mult_s16_m_ae32_vector.S"
    "signal_processing/esp-dsp/modules/matrix/mul/fixed/dspm_mult_s16_m_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/mul/fixed/dspm_mult_s16_ansi.c"
    "signal_processing/esp-dsp/modules/matrix/mul/fixed/dspm_mult_s16_aes3.S"
    "signal_processing/esp-dsp/modules/matrix/add/float/dspm_add_f32_ansi.c"
    "signal_processing/esp-dsp/modules/matrix/add/float/dspm_add_f32_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/addc/float/dspm_addc_f32_ansi.c"
    "signal_processing/esp-dsp/modules/matrix/addc/float/dspm_addc_f32_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/mulc/float/dspm_mulc_f32_ansi.c"
    "signal_processing/esp-dsp/modules/matrix/mulc/float/dspm_mulc_f32_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/sub/float/dspm_sub_f32_ansi.c"
    "signal_processing/esp-dsp/modules/matrix/sub/float/dspm_sub_f32_ae32.S"
    "signal_processing/esp-dsp/modules/matrix/mat/mat.cpp"

    "signal_processing/esp-dsp/modules/math/mulc/float/dsps_mulc_f32_ansi.c"
    "signal_processing/esp-dsp/modules/math/addc/float/dsps_addc_f32_ansi.c"
    "signal_processing/esp-dsp/modules/math/mulc/fixed/dsps_mulc_s16_ansi.c"
    "signal_processing/esp-dsp/modules/math/mulc/fixed/dsps_mulc_s16_ae32.S"
    "signal_processing/esp-dsp/modules/math/add/float/dsps_add_f32_ansi.c"
    "signal_processing/esp-dsp/modules/math/add/fixed/dsps_add_s16_ansi.c"
    "signal_processing/esp-dsp/modules/math/add/fixed/dsps_add_s16_ae32.S"
    "signal_processing/esp-dsp/modules/math/add/fixed/dsps_add_s16_aes3.S"
    "signal_processing/esp-dsp/modules/math/add/fixed/dsps_add_s8_ansi.c"
    "signal_processing/esp-dsp/modules/math/add/fixed/dsps_add_s8_aes3.S"

    "signal_processing/esp-dsp/modules/math/sub/float/dsps_sub_f32_ansi.c"
    "signal_processing/esp-dsp/modules/math/sub/fixed/dsps_sub_s16_ansi.c"
    "signal_processing/esp-dsp/modules/math/sub/fixed/dsps_sub_s16_ae32.S"
    "signal_processing/esp-dsp/modules/math/sub/fixed/dsps_sub_s16_aes3.S"
    "signal_processing/esp-dsp/modules/math/sub/fixed/dsps_sub_s8_ansi.c"
    "signal_processing/esp-dsp/modules/math/sub/fixed/dsps_sub_s8_aes3.S"

    "signal_processing/esp-dsp/modules/math/mul/float/dsps_mul_f32_ansi.c"
    "signal_processing/esp-dsp/modules/math/mul/fixed/dsps_mul_s16_ansi.c"
    "signal_processing/esp-dsp/modules/math/mul/fixed/dsps_mul_s16_ae32.S"
    "signal_processing/esp-dsp/modules/math/mul/fixed/dsps_mul_s16_aes3.S"
    "signal_processing/esp-dsp/modules/math/mul/fixed/dsps_mul_s8_ansi.c"
    "signal_processing/esp-dsp/modules/math/mul/fixed/dsps_mul_s8_aes3.S"

    "signal_processing/esp-dsp/modules/math/mulc/float/dsps_mulc_f32_ae32.S"
    "signal_processing/esp-dsp/modules/math/addc/float/dsps_addc_f32_ae32.S"
    "signal_processing/esp-dsp/modules/math/add/float/dsps_add_f32_ae32.S"
    "signal_processing/esp-dsp/modules/math/sub/float/dsps_sub_f32_ae32.S"
    "signal_processing/esp-dsp/modules/math/mul/float/dsps_mul_f32_ae32.S"
    "signal_processing/esp-dsp/modules/math/sqrt/float/dsps_sqrt_f32_ansi.c"

    "signal_processing/esp-dsp/modules/fft/float/dsps_fft2r_fc32_ae32_.S"
    "signal_processing/esp-dsp/modules/fft/float/dsps_fft2r_fc32_aes3_.S"
    "signal_processing/esp-dsp/modules/fft/float/dsps_fft2r_fc32_ansi.c"
    "signal_processing/esp-dsp/modules/fft/float/dsps_fft2r_fc32_ae32.c"
    "signal_processing/esp-dsp/modules/fft/float/dsps_bit_rev_lookup_fc32_aes3.S"
    "signal_processing/esp-dsp/modules/fft/float/dsps_fft4r_fc32_ansi.c"
    "signal_processing/esp-dsp/modules/fft/float/dsps_fft4r_fc32_ae32.c"
    "signal_processing/esp-dsp/modules/fft/float/dsps_fft2r_bitrev_tables_fc32.c"
    "signal_processing/esp-dsp/modules/fft/float/dsps_fft4r_bitrev_tables_fc32.c"
    "signal_processing/esp-dsp/modules/fft/fixed/dsps_fft2r_sc16_ae32.S"
    "signal_processing/esp-dsp/modules/fft/fixed/dsps_fft2r_sc16_ansi.c"
    "signal_processing/esp-dsp/modules/fft/fixed/dsps_fft2r_sc16_aes3.S"

    "signal_processing/esp-dsp/modules/dct/float/dsps_dct_f32.c"
    "signal_processing/esp-dsp/modules/support/snr/float/dsps_snr_f32.cpp"
    "signal_processing/esp-dsp/modules/support/sfdr/float/dsps_sfdr_f32.cpp"
    "signal_processing/esp-dsp/modules/support/misc/dsps_d_gen.c"
    "signal_processing/esp-dsp/modules/support/misc/dsps_h_gen.c"     
    "signal_processing/esp-dsp/modules/support/misc/dsps_tone_gen.c"
    "signal_processing/esp-dsp/modules/support/cplx_gen/dsps_cplx_gen.c"
    "signal_processing/esp-dsp/modules/support/cplx_gen/dsps_cplx_gen.S"
    "signal_processing/esp-dsp/modules/support/cplx_gen/dsps_cplx_gen_init.c"
    "signal_processing/esp-dsp/modules/support/mem/esp32s3/dsps_memset_aes3.S"
    "signal_processing/esp-dsp/modules/support/mem/esp32s3/dsps_memcpy_aes3.S"
    "signal_processing/esp-dsp/modules/support/view/dsps_view.cpp"
    "signal_processing/esp-dsp/modules/windows/hann/float/dsps_wind_hann_f32.c"
    "signal_processing/esp-dsp/modules/windows/blackman/float/dsps_wind_blackman_f32.c"
    "signal_processing/esp-dsp/modules/windows/blackman_harris/float/dsps_wind_blackman_harris_f32.c"
    "signal_processing/esp-dsp/modules/windows/blackman_nuttall/float/dsps_wind_blackman_nuttall_f32.c"
    "signal_processing/esp-dsp/modules/windows/nuttall/float/dsps_wind_nuttall_f32.c"
    "signal_processing/esp-dsp/modules/windows/flat_top/float/dsps_wind_flat_top_f32.c"
    "signal_processing/esp-dsp/modules/conv/float/dsps_conv_f32_ansi.c"
    "signal_processing/esp-dsp/modules/conv/float/dsps_conv_f32_ae32.S"
    "signal_processing/esp-dsp/modules/conv/float/dsps_corr_f32_ansi.c"
    "signal_processing/esp-dsp/modules/conv/float/dsps_corr_f32_ae32.S"
    "signal_processing/esp-dsp/modules/conv/float/dsps_ccorr_f32_ansi.c"
    "signal_processing/esp-dsp/modules/conv/float/dsps_ccorr_f32_ae32.S"
    "signal_processing/esp-dsp/modules/iir/biquad/dsps_biquad_f32_ae32.S"
    "signal_processing/esp-dsp/modules/iir/biquad/dsps_biquad_f32_aes3.S"
    "signal_processing/esp-dsp/modules/iir/biquad/dsps_biquad_f32_ansi.c"
    "signal_processing/esp-dsp/modules/iir/biquad/dsps_biquad_gen_f32.c"
    "signal_processing/esp-dsp/modules/fir/float/dsps_fir_f32_ae32.S"
    "signal_processing/esp-dsp/modules/fir/float/dsps_fir_f32_aes3.S"
    "signal_processing/esp-dsp/modules/fir/float/dsps_fird_f32_ae32.S"
    "signal_processing/esp-dsp/modules/fir/float/dsps_fird_f32_aes3.S"
    "signal_processing/esp-dsp/modules/fir/float/dsps_fir_f32_ansi.c"
    "signal_processing/esp-dsp/modules/fir/float/dsps_fir_init_f32.c"
    "signal_processing/esp-dsp/modules/fir/float/dsps_fird_f32_ansi.c"
    "signal_processing/esp-dsp/modules/fir/float/dsps_fird_init_f32.c"
    "signal_processing/esp-dsp/modules/fir/fixed/dsps_fird_init_s16.c"
    "signal_processing/esp-dsp/modules/fir/fixed/dsps_fird_s16_ansi.c"
    "signal_processing/esp-dsp/modules/fir/fixed/dsps_fird_s16_ae32.S"
    "signal_processing/esp-dsp/modules/fir/fixed/dsps_fir_s16_m_ae32.S"
    "signal_processing/esp-dsp/modules/fir/fixed/dsps_fird_s16_aes3.S"
# EKF files
    "signal_processing/esp-dsp/modules/kalman/ekf/common/ekf.cpp"
    "signal_processing/esp-dsp/modules/kalman/ekf_imu13states/ekf_imu13states.cpp"
    )

# Always included headers
set(includes 
    "signal_processing/inc"

# ESP-DSP
    "signal_processing/esp-dsp/modules/dotprod/include"
    "signal_processing/esp-dsp/modules/support/include"
    "signal_processing/esp-dsp/modules/support/mem/include"
    "signal_processing/esp-dsp/modules/windows/include"
    "signal_processing/esp-dsp/modules/windows/hann/include"
    "signal_processing/esp-dsp/modules/windows/blackman/include"
    "signal_processing/esp-dsp/modules/windows/blackman_harris/include"
    "signal_processing/esp-dsp/modules/windows/blackman_nuttall/include"
    "signal_processing/esp-dsp/modules/windows/nuttall/include"
    "signal_processing/esp-dsp/modules/windows/flat_top/include"
    "signal_processing/esp-dsp/modules/iir/include"
    "signal_processing/esp-dsp/modules/fir/include"
    "signal_processing/esp-dsp/modules/math/include"
    "signal_processing/esp-dsp/modules/math/add/include"
    "signal_processing/esp-dsp/modules/math/sub/include"
    "signal_processing/esp-dsp/modules/math/mul/include"
    "signal_processing/esp-dsp/modules/math/addc/include"
    "signal_processing/esp-dsp/modules/math/mulc/include"
    "signal_processing/esp-dsp/modules/math/sqrt/include"
    "signal_processing/esp-dsp/modules/matrix/mul/include"
    "signal_processing/esp-dsp/modules/matrix/add/include"
    "signal_processing/esp-dsp/modules/matrix/addc/include"
    "signal_processing/esp-dsp/modules/matrix/mulc/include"
    "signal_processing/esp-dsp/modules/matrix/sub/include"
    "signal_processing/esp-dsp/modules/matrix/include"
    "signal_processing/esp-dsp/modules/fft/include"
    "signal_processing/esp-dsp/modules/dct/include"
    "signal_processing/esp-dsp/modules/conv/include"
    "signal_processing/esp-dsp/modules/common/include"
    "signal_processing/esp-dsp/modules/matrix/mul/test/include"
    # EKF files
    "signal_processing/esp-dsp/modules/kalman/ekf/include"
    "signal_processing/esp-dsp/modules/kalman/ekf_imu13states/include"
    )
 
set(priv_include_dirs       "signal_processing/esp-dsp/modules/dotprod/float"
                            "signal_processing/esp-dsp/modules/dotprod/fixed")

idf_component_register(SRCS ${srcs}
                       INCLUDE_DIRS ${includes}
                       REQUIRES driver)